--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Box Styling</title>
+    <title>Zachary Lindoerfer</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./assets/reset.css">
@@ -26,31 +26,32 @@
       </nav>
     </header>
     <main>
-      <h1 id="Aboutme">About me</h1>
+      <h3 id="Aboutme">About me</h3>
       <p></p>
-      <div class="cards" id="cards">
+      <content class="cards" id="cards">
         <h1>More info</h1>
         <section class="Tcard">
-          <header></header>
-          <img src="" alt="" />
+          
+          <h2>present day</h2>
+          <img src="./Assets/fence.jpg" alt="fence guy"/>
         </section>
         <section class="card">
-          <header></header>
-          <img src="" alt="" />
+          <h2>past</h2>
+          <img src="./Assets/well.webp" alt="wells"/>
         </section>
         <section class="card">
-          <header></header>
-          <img src="" alt="" />
+          <h2>schooling</h2>
+          <img src="./Assets/grad.jpg" alt="graduation" />
         </section>
         <section class="card">
-          <header></header>
-          <img src="" alt="" />
+          <h2>future</h2>
+          <img src="./Assets/techno.webp" alt="tech" />
         </section>
         <section class="card">
-          <header></header>
+          <h2></h2>
           <img src="" alt="" />
         </section>
-      </div>
+      </content>
     </main>
   </body>
 </html>
